@@ -1,3 +1,7 @@
+November 5, 2009 Wei Mingzhi <weimingzhi@gmail.com>
+
+ * plugins/dfxvideo/draw.c: Check for centering.
+
 November 4, 2009 Wei Mingzhi <weimingzhi@gmail.com>
 
  * libpcsxcore/sio.c: Fixed the format of new memory card file, which solves
